--- a/wnm608_test/m1/index.html
+++ b/wnm608_test/m1/index.html
@@ -1,4 +1,37 @@
 <html>
-<h1>Hello world</h1>
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>Sweetie Heart  </title>
+	<link rel="stylesheet" href="lib/css/styleguide.css">
+</head>
+<body>
+<header class="container display-flex  ">
+	<div class="flex-none"> <h1>Sweetie Heart </h1></div>
+	<div class="flex-stretch"></div>
+	<div class="flex-none topnav">
+	<a class ="active" href="#home">Home</a>
+	<a href="#cart">Shopping Cart </a>
+	<a href ="#signin">Sign in</a>
+	<a href = "#contact">Contact Us</a>
+	</div>
+</header>
+<div class="back_ground">
+	<img src ="img/bg.jpg">
 
+
+
+</div>
+
+
+
+
+
+
+
+
+
+</body>
+<footer><p>&copy; 2021 Sherry Wang</p></footer>
 </html>
+
