--- a/wnm608_test/styleguide/index.html
+++ b/wnm608_test/styleguide/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale = 1.0">
     <title>CSS Styleguide</title>
-    <link rel="stylesheet" href="lib/css/styleguide.css">
-    <link rel="stylesheet" href="css/storetheme.css">
-    <link rel="stylesheet" href="lib/css/gridsystem.css">
+    <link rel="stylesheet" href="../lib/css/styleguide.css">
+    <link rel="stylesheet" href="../css/storetheme.css">
+    <link rel="stylesheet" href="../lib/css/gridsystem.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
